# dbdeclare

./: .gitignore  .pre-commit-config.yaml  404.html  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  index.html  mkdocs.yml  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: on-pull-request.yaml  on-release.yaml
contributing/: index.html
dbdeclare/: controller.py
dbdeclare/data_structures/: __init__.py  grant_on.py  grant_to.py
dbdeclare/entities/: __init__.py  cluster_entity.py  database.py  database_content.py  database_entity.py  entity.py  role.py  schema.py
dbdeclare/mixins/: grantable.py  sql.py
docs/: contributing.md  help.md  index.md
docs/guide/: controller.md  databases.md  grants.md  index.md  roles.md  schemas.md  tables-and-columns.md  tables.md
docs_src/: index.py
docs_src/guide/: controller.py  databases.py  example.py  grants.py  roles.py  schemas.py  tables.py
guide/: index.html
guide/controller/: index.html
guide/databases/: index.html
guide/grants/: index.html
guide/roles/: index.html
guide/schemas/: index.html
guide/tables/: index.html
postgres_declare/: base.py  base_entity.py  cluster_entities.py  controller.py  database_entities.py  entities.py  exceptions.py  grant.py  mixins.py  sqlmixin.py
postgres_declare/data_structures/: __init__.py  grant_on.py  grant_to.py  privileges.py
postgres_declare/entities/: __init__.py  base_entity.py  cluster_entity.py  database.py  database_content.py  database_entity.py  entity.py  grant.py  grantable.py  role.py  schema.py
postgres_declare/mixins/: grantable.py  sql.py
search/: search_index.json
tests/: conftest.py  helpers.py  test_entities.py
tests/docs/: test_examples.py
tests/it/: test_all.py  test_database.py  test_database_content.py  test_role.py  test_schema.py
tests/unit/: test_database_entity.py  test_entity.py  test_grantable.py
