[tool.poetry]
name = "postgres-declare"
version = "0.0.1"
description = "Declarative layer for everything Postgres."
license = "MIT"
authors = ["Raaid Arshad <raaid@protonmail.com>"]
#maintainers = []
readme = "README.md"
# TODO fill in when docs are up
#homepage = ""
repository = "https://github.com/raaidarshad/postgres-declare"
# TODO fill in when docs are up
#documentation = ""
keywords = ["sql", "alchemy", "postgres"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: System Administrators",
    "Operating System :: OS Independent",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.11",
    "Topic :: Database",
    "Typing :: Typed"
]

[tool.poetry.dependencies]
python = "^3.11.0"
sqlalchemy = "^2.0.0"

[tool.poetry.group.dev.dependencies]
hypothesis = "^6.60.0"
mypy = "^0.991"
pre-commit = "^2.19.0"
psycopg = "3.1.4"
pytest = "^7.1.2"
pytest-order = "1.0.1"

# TODO fill out when adding docs tools
#[tool.poetry.group.docs.dependencies]
#optional = true


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
(
  /(                        # exclude a few common directories in the
    \.git                   # root of the project
    | \.pytest_cache
    | python-venv
    | \.venv
    | build
    | dist
    | \.tox
  ))
'''

[tool.isort]
profile = "black"

[tool.mypy]
strict = true
files = "."
exclude = [
    '\.venv',
]
